--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,9 @@ python:
    - "2.6"
    - "2.7"
 
-install:
-   - python setup.py develop
-
-script: nosetests
+install: python setup.py install
+script: python setup.py test
+notifications:
+    email: true
+    irc:
+        - "irc.freenode.net#foss-rit"
