edit travis.yaml so it doesn't notify on success all the time

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,3 +11,5 @@ notifications:
     email: true
     irc:
         - "irc.freenode.net#floss-seminar"
+    on_success: change
+    on_failure: always
